tests/compile_fail/duplicate_description.rs
use structly::Structly;

#[derive(Structly)]
struct Demo {
    #[structly(description = "one", description = "two")]
    label: Option<String>,
}

fn main() {}
