tests/compile_fail/duplicate_description.stderr
error: duplicate `description` argument
 --> tests/compile_fail/duplicate_description.rs:5:37
  |
5 |     #[structly(description = "one", description = "two")]
  |                                     ^^^^^^^^^^^
